[tool.poetry]
name = "sentry"
version = "0.1.0"
description = "advanced trading tool"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dotenv = "^0.9.9"
requests = "^2.32.3"
flask = "^3.1.0"
pyngrok = "^7.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
