[tool.poetry]
name = "sentry"
version = "0.1.0"
description = "advanced trading tool"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dotenv = "^0.9.9"
requests = "^2.32.3"
flask = "^3.1.0"
pyngrok = "^7.2.3"
numpy = "^2.2.3"
matplotlib = "^3.10.1"
pandas = "^2.2.3"
scipy = "^1.15.2"
base58 = "^2.1.1"
aiohttp = "^3.11.14"
asyncio = "^3.4.3"
solana = "^0.36.6"
solders = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
